--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -34,7 +34,7 @@
     <item msgid="8667007781479284572">":-\\"</item>
     <item msgid="6895634303037073990">":\'("</item>
     <item msgid="3660685022708121640">":-X"</item>
-    <item msgid="2893940139682468617">":-Di"</item>
+    <item msgid="2893940139682468617">":-D"</item>
     <item msgid="4888792634429693183">"o_O"</item>
   </string-array>
   <string-array name="default_smiley_names">
@@ -56,4 +56,29 @@
     <item msgid="6334637439528489607">"Risata"</item>
     <item msgid="7602915122893958066">"Confuso"</item>
   </string-array>
+
+    <string-array name="pref_mms_notification_vibrate_pattern_entries">
+      <item>Normale</item>
+      <item>Vibrazione media</item>
+      <item>Vibrazione prolungata</item>
+      <item>Multiple brevi</item>
+      <item>Multiple prolungate</item>
+      <item>@string/pref_mms_custom_option</item>
+   </string-array>
+
+   <string-array name="pref_templates_gestures_sensitivity_entries">
+      <item>1 (Tollerante)</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
+      <item>5</item>
+      <item>6</item>
+      <item>7</item>
+      <item>8</item>
+      <item>9</item>
+      <item>10</item>
+      <item>11</item>
+      <item>12 (Preciso)</item>
+    </string-array>
+
 </resources>
