--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -61,4 +61,87 @@
         <item>Laughing</item>                <!-- 15: :-D -->
         <item>Confused</item>                <!-- 16: o_O -->
     </string-array>
+    <string-array name="pref_mms_user_agent_entries">
+        <item>Default Android</item>
+        <item>Nokia N95</item>
+        <item>iPhone (3.0)</item>
+        <item>BlackBerry 8800</item>
+        <item>Sony Ericsson W800i</item>
+        <item>SoftBank X01T</item>
+        <item>@string/pref_mms_custom_option</item>
+    </string-array>
+    <string-array name="pref_mms_user_agent_values" translatable="false">
+        <item>default</item>
+        <item>NokiaN95/11.0.026; Series60/3.1 Profile/MIDP-2.0 Configuration/CLDC-1.1</item>
+        <item>iPhoneOS/3.0 (7A341)</item>
+        <item>BlackBerry8800/4.2.1 Profile/MIDP-2.0 Configuration/CLDC-1.1 VendorID/100</item>
+        <item>SonyEricssonW800i/R1L</item>
+        <item>SoftBank/1.0/X01T/SCJ001</item>
+        <item>custom</item>
+    </string-array>
+    <string-array name="pref_mms_message_font_size_entries">
+        <item>10</item>
+        <item>12</item>
+        <item>14</item>
+        <item>16</item>
+        <item>18 (Default)</item>
+        <item>20</item>
+  </string-array>
+
+    <string-array translatable="false" name="pref_mms_message_font_size_values">
+        <item>10</item>
+        <item>12</item>
+        <item>14</item>
+        <item>16</item>
+        <item>18</item>
+        <item>20</item>
+  </string-array>
+
+    <string-array name="pref_mms_notification_vibrate_pattern_entries">
+      <item>Normal</item>
+      <item>Medium Vibrate</item>
+      <item>Long Vibrate</item>
+      <item>Multiple Short</item>
+      <item>Multiple Long</item>
+      <item>@string/pref_mms_custom_option</item>
+   </string-array>
+    <string-array name="pref_mms_notification_vibrate_pattern_values" translatable="false">
+      <item></item>
+      <item>0,1200</item>
+      <item>0,2500</item>
+      <item>0,300,100,300,100,300,100,300,100,300</item>
+      <item>0,800,200,800,200,800</item>
+      <item>custom</item>
+   </string-array>
+
+   <string-array name="pref_templates_gestures_sensitivity_entries">
+      <item>1 (broadest)</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
+      <item>5</item>
+      <item>6</item>
+      <item>7</item>
+      <item>8</item>
+      <item>9</item>
+      <item>10</item>
+      <item>11</item>
+      <item>12 (strictest)</item>
+    </string-array>
+
+    <string-array name="pref_templates_gestures_sensitivity_values" translatable="false">
+      <item>1</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
+      <item>5</item>
+      <item>6</item>
+      <item>7</item>
+      <item>8</item>
+      <item>9</item>
+      <item>10</item>
+      <item>11</item>
+      <item>12</item>
+    </string-array>
+
 </resources>
