--- a/res/values-hu/arrays.xml
+++ b/res/values-hu/arrays.xml
@@ -18,6 +18,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
   <string-array name="default_smiley_names">
     <item msgid="1831934949361041701">"Mosoly"</item>
     <item msgid="1601611480575517120">"Szomorú"</item>
@@ -41,4 +42,38 @@
     <item msgid="8479809115158836070">"Kacsintás"</item>
     <item msgid="638612939305162424">"Pókerarc"</item>
   </string-array>
+
+  <string-array name="pref_templates_gestures_sensitivity_entries">
+    <item>1 (Pontatlanabb)</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
+    <item>9</item>
+    <item>10</item>
+    <item>11</item>
+    <item>12 (Pontosabb)</item>
+  </string-array>
+
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+    <item>Normál</item>
+    <item>Közepes</item>
+    <item>Hosszú</item>
+    <item>Többszöri rövid</item>
+    <item>Többszöri hosszú</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
+
+  <string-array name="pref_mms_notification_vibrate_pattern_values">
+    <item></item>
+    <item>0,1200</item>
+    <item>0,2500</item>
+    <item>0,300,100,300,100,300,100,300,100,300</item>
+    <item>0,800,200,800,200,800</item>
+    <item>Egyéni</item>
+  </string-array>
+
 </resources>
