--- a/res/values-pt/arrays.xml
+++ b/res/values-pt/arrays.xml
@@ -41,4 +41,26 @@
     <item msgid="8479809115158836070">"Sorriso forçado"</item>
     <item msgid="638612939305162424">"Indiferente"</item>
   </string-array>
+  <string-array name="pref_templates_gestures_sensitivity_entries">
+    <item>1 (mais amplo)</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
+    <item>9</item>
+    <item>10</item>
+    <item>11</item>
+    <item>12 (estrita)</item>
+  </string-array>
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+    <item>Normal</item>
+    <item>Vibração Média</item>
+    <item>Vibração Longa</item>
+    <item>Curto Múltiplo</item>
+    <item>Longo Múltiplo</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
 </resources>
