--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -41,4 +41,26 @@
     <item msgid="8479809115158836070">"Ghigno"</item>
     <item msgid="638612939305162424">"Impassibile"</item>
   </string-array>
+  <string-array name="pref_templates_gestures_sensitivity_entries">
+    <item>1 (Tollerante)</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
+    <item>9</item>
+    <item>10</item>
+    <item>11</item>
+    <item>12 (Preciso)</item>
+  </string-array>
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+    <item>Normale</item>
+    <item>Vibrazione media</item>
+    <item>Vibrazione lunga</item>
+    <item>Ripetute e brevi</item>
+    <item>Ripetute e lunghe</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
 </resources>
