Forward port core translations
This only includes the translations for the new features, changes to
original Messaging app strings have not been ported over and will need
to be ported separately

Change-Id: I750e04aea961905e44ca80dec73a217634349304

--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -44,4 +44,17 @@
   <string-array name="empty_subject_strings">
     <item msgid="7691141505407124426">"без темы"</item>
   </string-array>
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+    <item>Нормальный</item>
+    <item>Средняя вибрация</item>
+    <item>Длинная вибрация</item>
+    <item>Несколько коротких</item>
+    <item>Несколько длинных</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
+    <string-array name="pref_entries_input_type">
+       <item>Emoji</item>
+       <item>Отправить</item>
+       <item>Вставка новой строки</item>
+    </string-array>
 </resources>
