--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -44,4 +44,12 @@
   <string-array name="empty_subject_strings">
     <item msgid="7691141505407124426">"kein Betreff"</item>
   </string-array>
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+      <item>Normal</item>
+      <item>Mittel</item>
+      <item>Lang</item>
+      <item>Mehrmals kurz</item>
+      <item>Mehrmals lang</item>
+      <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
 </resources>
