--- a/res/values-hu/arrays.xml
+++ b/res/values-hu/arrays.xml
@@ -44,4 +44,37 @@
   <string-array name="empty_subject_strings">
     <item msgid="7691141505407124426">"nincs tárgy"</item>
   </string-array>
+  <string-array name="pref_templates_gestures_sensitivity_entries">
+    <item>1 (Pontatlanabb)</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
+    <item>9</item>
+    <item>10</item>
+    <item>11</item>
+    <item>12 (Pontosabb)</item>
+  </string-array>
+
+  <string-array name="pref_mms_notification_vibrate_pattern_entries">
+    <item>Normál</item>
+    <item>Közepes</item>
+    <item>Hosszú</item>
+    <item>Többszöri rövid</item>
+    <item>Többszöri hosszú</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
+  </string-array>
+
+  <string-array name="pref_mms_notification_vibrate_pattern_values">
+    <item></item>
+    <item>0,1200</item>
+    <item>0,2500</item>
+    <item>0,300,100,300,100,300,100,300,100,300</item>
+    <item>0,800,200,800,200,800</item>
+    <item>Egyéni</item>
+  </string-array>
+
 </resources>
