--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -42,14 +42,34 @@
     <item msgid="638612939305162424">"Pokergesicht"</item>
   </string-array>
   <string-array name="empty_subject_strings">
-    <item msgid="7691141505407124426">"kein Betreff"</item>
+    <item msgid="7691141505407124426">"Kein Betreff"</item>
   </string-array>
+
+  <!-- **** CYANOGENMOD EDITS START **** -->
+
   <string-array name="pref_mms_notification_vibrate_pattern_entries">
-      <item>Normal</item>
-      <item>Mittel</item>
-      <item>Lang</item>
-      <item>Mehrmals kurz</item>
-      <item>Mehrmals lang</item>
-      <item>@string/pref_title_mms_notification_vibrate_custom</item>
+    <item>Normal</item>
+    <item>Mittel</item>
+    <item>Lang</item>
+    <item>Mehrmals kurz</item>
+    <item>Mehrmals lang</item>
+    <item>@string/pref_title_mms_notification_vibrate_custom</item>
   </string-array>
+
+  <string-array name="pref_templates_gestures_sensitivity_entries">
+    <item>1 (Sehr unempfindlich)</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
+    <item>9</item>
+    <item>10</item>
+    <item>11</item>
+    <item>12 (Sehr empfindlich)</item>
+  </string-array>
+
+  <!-- **** CYANOGENMOD EDITS END **** -->
 </resources>
