--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- 
- * Copyright (C) 2008 Esmertec AG.
- * Copyright (C) 2008 The Android Open Source Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2008 Esmertec AG
+     Copyright (C) 2008 The Android Open Source Project
+     Copyright (C) 2013 The CyanogenMod Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
@@ -44,6 +44,8 @@
   <string-array name="empty_subject_strings">
     <item msgid="7691141505407124426">"无主题"</item>
   </string-array>
+
+
   <string-array name="pref_templates_gestures_sensitivity_entries">
     <item>1（最宽松）</item>
     <item>2</item>
@@ -68,12 +70,4 @@
     <item>@string/pref_title_mms_notification_vibrate_custom</item>
   </string-array>
 
-  <string-array name="pref_mms_notification_vibrate_pattern_values">
-      <item></item>
-      <item>0,1200</item>
-      <item>0,2500</item>
-      <item>0,300,100,300,100,300,100,300,100,300</item>
-      <item>0,800,200,800,200,800</item>
-      <item>自定义</item>
-  </string-array>
 </resources>
