--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -79,6 +79,8 @@
         <item>no subject</item>
     </string-array>
 
+    <!-- **** CYANOGENMOD ADDITIONS START **** -->
+
     <string-array name="pref_templates_gestures_sensitivity_entries">
       <item>1 (broadest)</item>
       <item>2</item>
@@ -136,4 +138,6 @@
         <item>64</item> <!-- InputType.TYPE_TEXT_VARIATION_SHORT_MESSAGE constant  -->
         <item>80</item> <!-- InputType.TYPE_TEXT_VARIATION_LONG_MESSAGE constant  -->
     </string-array>
+
+    <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
