Breathing SMS Notification
This will give your SMS notifications a breathing effect in the statusbar instead of being a static icon.

Icon Credits: @Kroz

Change-Id: I67614713fbeec8ac77e933f29b8ee6e1a5f46162

Conflicts:
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -114,6 +114,11 @@
             android:title="@string/pref_title_notification_enabled"
             android:defaultValue="true" />
 
+        <CheckBoxPreference android:key="pref_key_sms_breath"
+            android:title="@string/sms_breath"
+            android:summary="@string/sms_breath_summary"
+            android:defaultValue="false" />
+
        <CheckBoxPreference
             android:key="pref_key_enable_privacy_mode"
             android:layout="?android:attr/preferenceLayoutChild"
